It's not perfect...
All elements have been added and all requirements met, but I will definitely revisit to tweak and make the image portfolio much more organized and aesthetically pleasing! also...will look at media queries.

--- a/responsive-final-project/contact.html
+++ b/responsive-final-project/contact.html
@@ -35,18 +35,18 @@
         <div class="signup">   
           
             <form>
-                <div class="col-med">
+                <div class="col-md">
                     <label>First Name:<input type="text"></label>
                     <label>Last Name:<input type="text"></label>
                     <label>Email:<input type="text"></label>
                 </div>
-                <div class="col-med">
+                <div class="col-md">
                     <label>Street Address:<input type="text"></label><br>
                     <label>City:<input type="text"></label><br>
                     <label>State:<input type="text"></label><br>
                     <label>Zip:<input type="text"></label><br>
                 </div>
-                <div class="col-med">
+                <div class="col-md">
                 <input type="submit" value="Submit">
                 </div>        
             </form>
